--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,11 @@
-name: Docker Image CI
-
+name: Build container image
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v5
     - name: Build the Docker image
       run: docker build . --file Dockerfile
